--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ aiofiles==24.1.0
 annotated-types==0.7.0
 anyio==4.9.0
 audioop-lts==0.2.1
+blinker==1.9.0
+cachetools==5.5.2
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.1.8
@@ -11,7 +13,11 @@ faiss-cpu==1.11.0
 fastapi==0.115.12
 ffmpy==0.5.0
 filelock==3.18.0
+Flask==3.1.1
+flask-cors==5.0.1
 fsspec==2025.3.2
+google-auth==2.40.1
+google-genai==1.16.1
 gradio==5.29.0
 gradio_client==1.10.0
 groovy==0.1.2
@@ -20,8 +26,10 @@ httpcore==1.0.9
 httpx==0.28.1
 huggingface-hub==0.30.2
 idna==3.10
+itsdangerous==2.2.0
 Jinja2==3.1.6
 joblib==1.5.0
+lxml==5.4.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
@@ -34,17 +42,22 @@ orjson==3.10.18
 packaging==25.0
 pandas==2.2.3
 pillow==11.2.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pydantic==2.11.4
 pydantic_core==2.33.2
 pydub==0.25.1
 Pygments==2.19.1
+PyMuPDF==1.25.5
 python-dateutil==2.9.0.post0
+python-docx==1.1.2
 python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
 rich==14.0.0
+rsa==4.9.1
 ruff==0.11.8
 safehttpx==0.1.6
 safetensors==0.5.3
@@ -71,3 +84,4 @@ tzdata==2025.2
 urllib3==2.4.0
 uvicorn==0.34.2
 websockets==15.0.1
+Werkzeug==3.1.3
