--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
+contourpy==1.3.2
+cycler==0.12.1
+dotenv==0.9.9
 einops==0.8.1
 faiss-cpu==1.11.0
 fastapi==0.115.12
@@ -15,6 +18,7 @@ ffmpy==0.5.0
 filelock==3.18.0
 Flask==3.1.1
 flask-cors==5.0.1
+fonttools==4.58.0
 fsspec==2025.3.2
 google-auth==2.40.1
 google-genai==1.16.1
@@ -29,9 +33,11 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 joblib==1.5.0
+kiwisolver==1.4.8
 lxml==5.4.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.10.3
 mdurl==0.1.2
 mpmath==1.3.0
 networkx==3.4.2
@@ -49,8 +55,10 @@ pydantic_core==2.33.2
 pydub==0.25.1
 Pygments==2.19.1
 PyMuPDF==1.25.5
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
+python-dotenv==1.1.0
 python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
