--- a/requirements.txt
+++ b/requirements.txt
@@ -2,94 +2,74 @@ aiofiles==24.1.0
 annotated-types==0.7.0
 anyio==4.9.0
 audioop-lts==0.2.1
-blinker==1.9.0
 cachetools==5.5.2
-certifi==2025.4.26
+certifi==2025.6.15
 charset-normalizer==3.4.2
-click==8.1.8
+choreographer==1.0.9
+click==8.2.1
 colorama==0.4.6
-contourpy==1.3.2
-cycler==0.12.1
 dotenv==0.9.9
-einops==0.8.1
-faiss-cpu==1.11.0
-fastapi==0.115.12
-ffmpy==0.5.0
+fastapi==0.116.0
+ffmpy==0.6.0
 filelock==3.18.0
-Flask==3.1.1
-flask-cors==5.0.1
-fonttools==4.58.0
-fsspec==2025.3.2
-google-auth==2.40.1
-google-genai==1.16.1
-gradio==5.29.0
-gradio_client==1.10.0
+fsspec==2025.5.1
+google-auth==2.40.3
+google-auth-oauthlib==1.2.2
+google-genai==1.24.0
+gradio==5.35.0
+gradio_client==1.10.4
 groovy==0.1.2
+gspread==6.2.1
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
-huggingface-hub==0.30.2
+huggingface-hub==0.33.2
 idna==3.10
-itsdangerous==2.2.0
 Jinja2==3.1.6
-joblib==1.5.0
-kiwisolver==1.4.8
-lxml==5.4.0
+kaleido==1.0.0
+logistro==1.1.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-matplotlib==3.10.3
 mdurl==0.1.2
-mpmath==1.3.0
-networkx==3.4.2
-nltk==3.9.1
-numpy==2.2.5
-ollama==0.4.8
+narwhals==1.46.0
+numpy==2.3.1
+oauthlib==3.3.1
 orjson==3.10.18
 packaging==25.0
-pandas==2.2.3
-pillow==11.2.1
+pandas==2.3.1
+pillow==11.3.0
+plotly==6.2.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
-pydantic==2.11.4
+pydantic==2.11.7
 pydantic_core==2.33.2
 pydub==0.25.1
-Pygments==2.19.1
-PyMuPDF==1.25.5
-pyparsing==3.2.3
+Pygments==2.19.2
 python-dateutil==2.9.0.post0
-python-docx==1.1.2
-python-dotenv==1.1.0
+python-dotenv==1.1.1
 python-multipart==0.0.20
 pytz==2025.2
 PyYAML==6.0.2
-regex==2024.11.6
-requests==2.32.3
+reportlab==4.4.2
+requests==2.32.4
+requests-oauthlib==2.0.0
 rich==14.0.0
 rsa==4.9.1
-ruff==0.11.8
+ruff==0.12.2
 safehttpx==0.1.6
-safetensors==0.5.3
-scikit-learn==1.6.1
-scipy==1.15.2
 semantic-version==2.10.0
-sentence-transformers==4.1.0
-setuptools==80.3.1
 shellingham==1.5.4
+simplejson==3.20.1
 six==1.17.0
 sniffio==1.3.1
 starlette==0.46.2
-sympy==1.14.0
-threadpoolctl==3.6.0
-tokenizers==0.21.1
-tomlkit==0.13.2
-torch==2.7.0
+tenacity==8.5.0
+tomlkit==0.13.3
 tqdm==4.67.1
-transformers==4.51.3
-typer==0.15.3
-typing-inspection==0.4.0
-typing_extensions==4.13.2
+typer==0.16.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
 tzdata==2025.2
-urllib3==2.4.0
-uvicorn==0.34.2
+urllib3==2.5.0
+uvicorn==0.35.0
 websockets==15.0.1
-Werkzeug==3.1.3
